@@ -11,6 +11,7 @@
     -->
 
   <bean id="DB2" class="org.springframework.jdbc.support.SQLErrorCodes">
+    <property name="databaseProductName"><value>DB2*</value></property>
     <property name="badSqlGrammarCodes"><value>-204,-206,-301,-408</value></property>
     <property name="dataIntegrityViolationCodes"><value>-803</value></property>
   </bean>
