@@ -54,6 +54,7 @@ Package org.springframework.ejb
 * added explicit proxy type checks to LocalSlsbInvokerInterceptor and AbstractRemoteSlsbInvokerInterceptor
 
 Package org.springframework.jdbc
+* added support for wildcard match on database product name like "DB2*" for SqlErrorCodesFactory
 * added support for retrieving auto generated keys to SqlUpdate and JdbcTemplate
 * added translation category for CannotAcquireLockException to SqlErrorCodeSQLExceptionTranslator and sql-error-codes
 * allow for defining custom translations using CustomSQLErrorCodesTranslation defined in the sql-error-codes.xml file
